[package]
name = "microsoft-office-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
serde = "1"
serde_json = "1"
walkdir = "2.3.3"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

[profile.release]
lto = true
